feat(api): implement wechat authentication and user management
- Add wechat login API endpoint with JWT token generation
- Create user model and type definitions
- Implement wechat API utility for code2session
- Add authentication plugin with JWT verification
- Update weapp login page to integrate with API
- Add test script and documentation for wechat login
- Setup project configuration and scripts

--- a/apps/weapp/tsconfig.json
+++ b/apps/weapp/tsconfig.json
@@ -5,7 +5,8 @@
       "es6",
       "es2017",
       "es2018",
-      "es2019"
+      "es2019",
+      "dom"
     ],
     "allowJs": true,
     "skipLibCheck": true,
