feat(weapp): enhance user authentication and profile management
- Add API service for wechat login and token verification
- Refactor MyPage component to handle user login state and profile display
- Implement loading state during login process
- Update styles for user profile and functional list
- Introduce new configuration file for API settings
- Modify project structure for better organization of API utilities

--- a/apps/weapp/project.config.json
+++ b/apps/weapp/project.config.json
@@ -1,5 +1,5 @@
 {
-  "miniprogramRoot": "dist/",
+  "miniprogramRoot": "../../nowbites-weapp/",
   "projectname": "nowbites-mini-program",
   "description": "今食刻 - 菜谱管理小程序",
   "appid": "touristappid",
