--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "NowBites API Server",
   "main": "src/index.ts",
-  "type": "module",
   "scripts": {
     "dev": "tsx src/scripts/dev.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint . --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "prod": "npm run build && npx pm2 start ecosystem.config.js --env production"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.0",
@@ -21,11 +21,10 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "fastify-plugin": "^4.5.1",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
     "eslint": "^9.0.0",
     "nodemon": "^3.1.0",
