--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -10,3 +10,6 @@ JWT_EXPIRES_IN=7d
 # WeChat Mini Program Configuration
 WECHAT_APPID=your_wechat_appid_here
 WECHAT_SECRET=your_wechat_secret_here
+
+# This was inserted by `prisma init`:
+DATABASE_URL="postgresql://postgres:@localhost:5432/nowbites"
