refactor(workflows): update deployment workflow and restructure dependency installation
- Split the installation and build steps in the API deployment workflow for clarity.
- Remove the `package-lock.json` file for the weapp, indicating the feature is no longer supported.
- Delete the `PLAN_FEATURE.md` file, as the meal planning feature documentation is no longer relevant.

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -23,17 +23,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
 
-      - name: Install dependencies and build application
-        working-directory: apps/api
+      - name: Install dependencies
         run: |
           pnpm install
+
+      - name: Build application
+        working-directory: apps/api
+        run: |
           pnpm db:generate
           pnpm build
 
