chore(workflows): update deployment workflow to exclude new directories
- Replace exclusions for `.env` and `dist` with `.turbo` and `src` in the API deployment workflow.
- Adjust the packaging process to better align with current project structure.

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -50,8 +50,8 @@ jobs:
           tar -czf ../../nowbites-api.tar.gz \
             --exclude='node_modules' \
             --exclude='.git' \
-            --exclude='.env' \
-            --exclude='dist' \
+            --exclude='.turbo' \
+            --exclude='src' \
             .
 
       - name: Deploy package to Server
