feat(api): integrate markdown recipe parsing and enhance recipe upload functionality
- Add a new API service for parsing markdown recipes, allowing users to submit markdown content and receive structured recipe data.
- Implement esbuild configuration for building the API with TypeScript support.
- Update the recipe upload page to utilize the new parsing API, improving user experience and data handling.
- Introduce nodemon for development convenience, enabling automatic restarts on file changes.
- Enhance styling for recipe upload components to improve layout and readability.
- Update package dependencies to include the new markdown parsing library and esbuild for optimized builds.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,8 +4,8 @@
   "description": "NowBites API Server",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "tsc",
+    "dev": "nodemon",
+    "build": "node esbuild.config.js",
     "start": "node dist/index.js",
     "lint": "eslint . --max-warnings 0",
     "check-types": "tsc --noEmit",
@@ -22,6 +22,7 @@
     "@fastify/jwt": "^8.0.0",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^2.1.0",
+    "@nowbites/parse-markdown-recipe": "workspace:*",
     "@prisma/client": "^6.13.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
+    "esbuild": "^0.19.0",
     "eslint": "^9.0.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
