feat(weapp): enhance recipe upload and listing UI with new styles and structure
- Introduce new action button styles for improved user interaction.
- Refactor recipe listing to utilize a grid layout for better organization.
- Update recipe card design with enhanced visuals and responsive elements.
- Add markdown input container for better layout in recipe upload.
- Clean up unused styles and streamline the overall CSS structure.
- Remove workspace dependencies from the API deployment workflow for cleaner package management.

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -39,6 +39,17 @@ jobs:
           pnpm db:generate
           pnpm build
 
+      - name: Remove workspace dependencies
+        working-directory: apps/api
+        run: |
+          # Remove workspace dependencies from package.json
+          sed -i '/workspace:\*/d' package.json
+          # Clean up empty lines that might be left
+          sed -i '/^[[:space:]]*$/d' package.json
+          # Remove trailing commas before closing braces
+          sed -i 's/,[[:space:]]*}/}/g' package.json
+          sed -i 's/,[[:space:]]*]/]/g' package.json
+
       - name: Package application
         working-directory: apps/api
         run: |
