--- a/apps/weapp/package.json
+++ b/apps/weapp/package.json
@@ -69,11 +69,13 @@
     "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-react": "^4.7.0",
     "babel-preset-taro": "4.1.4",
+    "dotenv": "^16.4.5",
     "eslint": "^8.12.0",
     "eslint-config-taro": "4.1.4",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "miniprogram-ci": "^2.1.14",
     "postcss": "^8.4.18",
     "sass": "^1.56.0",
     "sharp": "^0.34.3",
