feat(api): enhance recipe management with new conversion and verification scripts
- Add scripts for converting markdown recipes to JSON format and verifying recipes in the database.
- Implement a new seeding process to read and store recipes from JSON files.
- Introduce error handling and logging for improved debugging during recipe processing.
- Update package dependencies to support new functionalities and ensure compatibility.

--- a/apps/weapp/package.json
+++ b/apps/weapp/package.json
@@ -55,10 +55,12 @@
     "@tarojs/shared": "4.1.4",
     "@tarojs/taro": "4.1.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "taro-ui": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
     "@babel/preset-react": "^7.22.0",
     "@tarojs/cli": "4.1.4",
     "@tarojs/vite-runner": "4.1.4",
