--- a/apps/weapp/package.json
+++ b/apps/weapp/package.json
@@ -83,5 +83,8 @@
     "sharp": "^0.34.3",
     "typescript": "^4.1.0",
     "vite": "^4.0.0"
+  },
+  "resolutions": {
+    "@types/react": "^18.0.0"
   }
 }
