--- a/apps/weapp/package.json
+++ b/apps/weapp/package.json
@@ -29,7 +29,9 @@
     "dev:quickapp": "npm run build:quickapp -- --watch",
     "type-check": "tsc --noEmit",
     "dev": "npm run dev:weapp",
-    "build": "npm run build:weapp"
+    "build": "npm run build:weapp",
+    "prepublish:weapp": "npm run build",
+    "publish:weapp": "tsx scripts/publish-weapp.ts"
   },
   "browserslist": [
     "last 3 versions",
@@ -81,6 +83,7 @@
     "postcss": "^8.4.18",
     "sass": "^1.56.0",
     "sharp": "^0.34.3",
+    "tsx": "^3.14.0",
     "typescript": "^4.1.0",
     "vite": "^4.0.0"
   },
