--- a/apps/weapp/package.json
+++ b/apps/weapp/package.json
@@ -31,7 +31,8 @@
     "dev": "npm run dev:weapp",
     "build": "npm run build:weapp",
     "prepublish:weapp": "npm run build",
-    "publish:weapp": "tsx scripts/publish-weapp.ts"
+    "publish:weapp": "tsx scripts/publish-weapp.ts",
+    "postinstall": "weapp-tw patch"
   },
   "browserslist": [
     "last 3 versions",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/preset-react": "^7.22.0",
     "@tarojs/cli": "4.1.4",
     "@tarojs/vite-runner": "4.1.4",
@@ -72,6 +74,7 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
     "babel-preset-taro": "4.1.4",
     "dotenv": "^16.4.5",
     "eslint": "^8.12.0",
@@ -80,12 +83,14 @@
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "miniprogram-ci": "^2.1.14",
-    "postcss": "^8.4.18",
+    "postcss": "^8.5.6",
     "sass": "^1.56.0",
     "sharp": "^0.34.3",
+    "tailwindcss": "^3.4.17",
     "tsx": "^3.14.0",
     "typescript": "^4.1.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "weapp-tailwindcss": "^4.2.5"
   },
   "resolutions": {
     "@types/react": "^18.0.0"
