--- a/apps/weapp/package.json
+++ b/apps/weapp/package.json
@@ -42,6 +42,7 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@nowbites/types": "workspace:*",
     "@tarojs/components": "4.1.4",
     "@tarojs/helper": "4.1.4",
     "@tarojs/plugin-framework-react": "4.1.4",
@@ -91,8 +92,5 @@
     "typescript": "^4.1.0",
     "vite": "^4.0.0",
     "weapp-tailwindcss": "^4.2.5"
-  },
-  "resolutions": {
-    "@types/react": "^18.0.0"
   }
 }
