feat(api): implement user favorites functionality for recipes
- Add UserFavorite model to Prisma schema to track user favorites.
- Create migration for user_favorites table with necessary foreign key constraints.
- Implement favoriteRecipe endpoint to allow users to favorite recipes.
- Update authentication middleware to ensure user identification.
- Enhance recipe routes to include favorite functionality.
- Update WeChat Mini Program to support favoriting recipes with UI integration.

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -89,6 +89,9 @@ jobs:
             mkdir -p ${{ secrets.WORK_DIR }}
             cd ${{ secrets.WORK_DIR }}
 
+            # Clean existing files before extraction
+            rm -rf *
+
             # Extract the new package
             tar -xzf /tmp/nowbites-api.tar.gz -C .
 
