feat(api): implement favorites functionality and update recipe routes
- Introduce new endpoints for managing user favorites, including fetching and removing favorite recipes.
- Update existing recipe routes to reflect changes in user identification and improve API consistency.
- Refactor user recipe retrieval to enhance clarity and maintainability.
- Update API documentation to reflect new routes and usage.
- Enhance WeChat Mini Program to integrate favorites feature with UI updates for better user experience.

--- a/apps/weapp/package.json
+++ b/apps/weapp/package.json
@@ -58,9 +58,11 @@
     "@tarojs/runtime": "4.1.4",
     "@tarojs/shared": "4.1.4",
     "@tarojs/taro": "4.1.4",
+    "@types/react-dom": "18",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "taro-ui": "^3.3.0"
+    "taro-ui": "^3.3.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -70,7 +72,7 @@
     "@tarojs/cli": "4.1.4",
     "@tarojs/vite-runner": "4.1.4",
     "@tarojs/webpack5-runner": "4.1.4",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.3.23",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
